--- a/container/mysql/docker-compose.override.yaml
+++ b/container/mysql/docker-compose.override.yaml
@@ -2,11 +2,11 @@ version: '1.0'
 services:
   mysql:
     ports:
-      - "3307:3306"
+      - "3308:3306"
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: rentacar
-      MYSQL_USER: root
+      MYSQL_USER: bcsvgabor
       MYSQL_PASSWORD: password
     volumes:
       - "/c/Users/bcsvg/Documents/Coding/myRepo/rentacar/container/mysql/db:/var/lib/mysql"
